--- a/Final/ch1.html
+++ b/Final/ch1.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Blank</title>
 <style>
-#container{ clear:both ; display:block ; height:20000px; }
+#container{ clear:both ; display:block ; height:9000px; }
 .row { position:static; height:auto; clear:both}
 
 
@@ -29,7 +29,7 @@ section > .sprite { position:absolute; z-index: 3;}
 
 
 <section id="sec1" >
-	<img style="position:absolute" id="bg1" src="img/bg/ch1-1.png" width="1366">
+	<img style="position:absolute;" id="bg1" src="img/bg/ch1-1.png" width="1366">
 </section>
 
 <section id="sec2" >
@@ -44,6 +44,7 @@ section > .sprite { position:absolute; z-index: 3;}
 	<img id="bg4" style="position:absolute" src="img/bg/ch1-4.png" width="1366">
 </section>
 <section id="sec5">
+	<img id="bg5" style="position:absolute ; left:100% ;top:-200px; " src="img/bg/ch1-4c.png" width="1366">
 </section>
 
 </div>
@@ -52,7 +53,7 @@ section > .sprite { position:absolute; z-index: 3;}
 <script src="js/jquery.superscrollorama.js"></script>
 
 <script type="text/javascript" >
-  
+	var dur = 1000 ;  
 	var ctrl;
 $(document).ready(function(e) {
 	rH ();
@@ -61,7 +62,9 @@ $(document).ready(function(e) {
 	  playoutAnimations: false
 	});
 	
-ctrl.pin ($('#sec1'),5000,
+	
+/*
+ctrl.pin ($('#sec1'),dur,
 {anim:(new TimelineLite ())
 	.append([
 		TweenMax.fromTo($('#bg1'),5,{css:{top:0},immediateRender:true},{css:{top:-100}})
@@ -69,7 +72,7 @@ ctrl.pin ($('#sec1'),5000,
 	onUnpin:function (){$('#bg1').css('position','fixed').css('top',-100)}
 });
 
-ctrl.pin ($('#sec2'),5000,
+ctrl.pin ($('#sec2'),dur,
 {anim:(new TimelineLite ())
 	.append([
 		TweenMax.fromTo($('#bg2'),2,{css:{opacity:0},immediateRender:true},{css:{opacity:1}}),
@@ -80,7 +83,7 @@ ctrl.pin ($('#sec2'),5000,
 	}
 });
 
-ctrl.pin ($('#sec3'),5000,
+ctrl.pin ($('#sec3'),dur,
 {anim:(new TimelineLite ())
 	.append([
 		TweenMax.fromTo($('#bg3'),2,{css:{opacity:0},immediateRender:true},{css:{opacity:1}}),
@@ -91,16 +94,31 @@ ctrl.pin ($('#sec3'),5000,
 	}
 });
 
-ctrl.pin ($('#sec4'),5000,
+ctrl.pin ($('#sec4'),dur,
 {anim:(new TimelineLite ())
 	.append([
 		TweenMax.fromTo($('#bg4'),2,{css:{opacity:0},immediateRender:true},{css:{opacity:1}}),
 		TweenMax.fromTo($('#bg4'),5,{css:{top:0},immediateRender:true},{css:{top:-200}})
 	]),
 	onUnpin:function (){
-		$('#bg4').css('position','fixed').css('top',-200)
+		$('#bg4').css('position','fixed').css('top',-200);
 	}
 });
+
+ctrl.pin ($('#sec5'),dur,
+{anim:(new TimelineLite ())
+	.append([
+		TweenMax.fromTo($('#bg5'),5,{css:{left:'100%'},immediateRender:true},{css:{left:0}}),
+		TweenMax.fromTo($('#bg4'),5,{css:{left:0},immediateRender:true},{css:{left:'-100%'}})
+	]),
+	onUnpin:function (){
+//		$('#bg4').css('position','fixed').css('top',-200)
+	}
+});
+*/
+
+
+
 
 
 });
@@ -122,12 +140,11 @@ function adjH ($sec)
 		if (w < $(this).width() )
 		{
 			w = $(this).width();
+//			alert(w);
 		}
 	});
 	$sec.height(h);
-	
-	
-	
+	$sec.width(w);
 }
 
 
