--- a/assign3_JSON/index.html
+++ b/assign3_JSON/index.html
@@ -10,6 +10,30 @@
 </head>
 
 <body>
+
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    // init the FB JS SDK
+    FB.init({
+      appId      : 385059501613174,                        // App ID from the app dashboard
+      channelUrl : '//radiansmile.github.io', // Channel file for x-domain comms
+      status     : true,                                 // Check Facebook Login status
+      xfbml      : true                                  // Look for social plugins on the page
+    });
+
+    // Additional initialization code such as adding Event Listeners goes here
+  };
+
+  // Load the SDK asynchronously
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -78,8 +102,6 @@
   
 </div> 
 <div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true" data-font="lucida grande"></div>
->>>>>>> add
->>>>>>> temp
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="../assign4_JSON/js/bootstrap.min.js"></script>
