--- a/assign3_JSON/index.html
+++ b/assign3_JSON/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Assign4</title>
-<link href="../assign4_JSON/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
-<link href="../assign4_JSON/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
-<link href="../assign4_JSON/css/custom.css" rel="stylesheet">
+<link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -104,9 +104,9 @@
 <div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true" data-font="lucida grande"></div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-<script src="../assign4_JSON/js/bootstrap.min.js"></script>
-<script src="../assign4_JSON/js/print.js"></script>
-<script src="../assign4_JSON/js/run.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="print.js"></script>
+<script src="js/run.js"></script>
 <script type="text/javascript">
   window.onload = function() 
   {
