--- a/assign3_JSON/index.html
+++ b/assign3_JSON/index.html
@@ -105,7 +105,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="print.js"></script>
+<script src="js/print.js"></script>
 <script src="js/run.js"></script>
 <script type="text/javascript">
   window.onload = function() 
