--- a/assign3_JSON/index.html
+++ b/assign3_JSON/index.html
@@ -90,18 +90,15 @@
     </div>
   </div>
 
-</div> 
-<div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true" data-font="lucida grande"></div>
+  
   <div class="row">
-    <div class="span12">
-      <div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true"></div>
-    </div>
+    <div class="fb-like" data-href="http://radiansmile.github.io/web/assign3_JSON/index.html" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-font="arial"></div>
   </div>
+
 </div>
 
   
-</div> 
-<div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true" data-font="lucida grande"></div>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="js/bootstrap.min.js"></script>
