--- a/assign3_JSON/index.html
+++ b/assign3_JSON/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Assign4</title>
+<title>Assign3 JSON</title>
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
