--- a/Final/ch3.html
+++ b/Final/ch3.html
@@ -8,22 +8,174 @@
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet"-->
 <link href="css/parallax.css" rel="stylesheet">
 <style>
-.test{ background:url(img/logo.png); width:300px; height:300px ; rotation:180deg;;}
+
+
+#planet { background-image:url(img/bg/ch3/ch3global.png); z-index:100; top:70%;}
 </style>
 
 </head>
 
 <body>
 <div class="container">
- <div class="test"></div>
+<!-- 這裡是背景 -->
+	<div class="layer">
+  	<div id="ly1" class="layerInner">
+    	<div id="planet" class=" layerInInner cover"></div>
+  	  <img id="bg" class="layerInInner" src="img/bg/ch3/ch3onlyback.png" style="position:fixed ; z-index:10">
+    </div>
+  </div>
+  
+  
+  
+<!-- 這裡是雲或星星 -->  
+  <div class="layer">
+  	<div id="ly2" class="layerInner">
+    </div>
+  </div>
+
+
+<!-- 這裡是圖片s -->  
+  <div class="layer">
+  	<div id="ly3" class="layerInner">
+    </div>
+  </div>
+
+
+<!-- 這裡是文字 -->  
+  <div class="layer">
+  	<div id="ly4" class="layerInner">
+    </div>
+  </div>
+
+
+<!-- 這裡是NAVIGATION -->  
+	<div style="width:100%; position:fixed ; background:#111111 ; border-bottom:solid medium #222222; height:37px; z-index:9999;">
+    <div class="layerInner" style="width:100%">
+     	<a id="index" href="#" style="float:left" ><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px;"> The Little Prince</h2></a>
+      <a id="preNav" href="#" style="float:right; display:block; margin-right:15px;"><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px; "> Chapters</h2></a>
+
+    </div>
+  	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999;">
+      <div>
+        <a id="toCh1" href="#" class="chBtn"><div><h3 class="aCenter" style="margin:5px 0 5px 0 ;">CH1</h3></div></a>
+        <a id="toCh2" href="#" class="chBtn"><div><h3 class="aCenter">CH2</h3></div></a>
+        <a id="toCh3" href="#" class="chBtn"><div><h3 class="aCenter">CH3</h3></div></a>
+        <a id="toCh4" href="#" class="chBtn"><div><h3 class="aCenter">CH4</h3></div></a>
+        <a id="toCh5" href="#" class="chBtn"><div><h3 class="aCenter">CH5</h3></div></a>
+        <a id="toTalk" href="#" class="chBtn"><div><h3 class="aCenter">CHx</h3></div></a>
+       </div>
+      <a id="hideNav" href="#" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
+    </div>
+  </div>
+
+
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
 <script src="js/jquery.superscrollorama.js"></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
 <script type="text/javascript" >
+onLoad ();
+function onLoad (){
+	$('#planet').width( $(window).width());
+	$('#planet').height($(window).width());
+
+}
 
 
+
+
+function setNavBtn (){
+$('#hideNav').on('click',function (e){
+	$("#nav").hide( 'blind', null, 1000, null );	
+});
+$('#preNav').on('click',function (e){
+	$("#nav").show( 'blind', null, 2000, null );
+});
+}
+
+$(window).resize(function(e) {
+	resiz ();
+	var  a = confirm ("Please don't resize the window when reading the pages! This Page will now refresh ");
+	if  (a){ location.reload()} else { location.reload();}
+
+	
+});
+
+function resiz ()
+{
+	if ($(window).width() >= 960)
+	{
+		$('#bg').attr('width',$(window).width());
+	}else{
+		$('#bg').attr('width',960);
+	}
+}
+
+
+
+$(window).resize(function(e) {
+	resiz ();
+	var  a = confirm ("Please don't resize the window when reading the pages! This Page will now refresh ");
+	if  (a){ location.reload()} else { location.reload();}
+
+	
+});
+
+function resiz ()
+{
+	if ($(window).width() >= 960)
+	{
+		$('#bg').attr('width',$(window).width());
+	}else{
+		$('#bg').attr('width',960);
+	}
+}
+
+
+
+
+var ctrl ;
+var bgDy = 0;
+var docDur = 0;
+function init()
+{
+	bgDy = $('#bg').height() - $(window).height();
+	docDur = $('#bg').height()*10; 	
+	$('body').height($('#bg').height()*2 + $(window).height());
+			//alert($('body').height());
+			//$('body').height($('#bg').height());
+			//alert($(document).height()); 
+	$.each($('.layer'),function (e){ $(this).height($(window).height()) ;});
+			//	$('#container').height($(body).height());
+	$("#ly4").height($(window).height());
+	$("#ly1").height($(window).height());
+}
+
+
+$(document).ready(function(e) {
+	init();
+	resiz ();
+	setNavBtn ();
+	setPara ();
+});
+
+function setPara ()
+{		
+  ctrl = $.superscrollorama ({
+		triggerAtCenter:false,
+	  playoutAnimations: false
+	});
+	
+	ctrl.pin ($('#ly1'),docDur,{
+		anim:(new TimelineLite())
+			.append (TweenMax.fromTo($('#planet'),5,{css:{opacity:1,},immediateRender:false , ease:Linear.easeNone},{css:{ opacity:0},ease:Linear.easeNone}))
+
+
+
+	});
+}
 
 </script>
 </body>
