--- a/Final/test.html
+++ b/Final/test.html
@@ -9,25 +9,29 @@
 <link href="css/parallax.css" rel="stylesheet">
 <style>
 .test{ background:url(img/logo.png); width:300px; height:300px ; rotation:180deg;;}
+
+#prince{background-image:url(img/roles/ch3/talk.png)}
+#kin1 { background-image:url(img/roles/ch3/kin1.png) !important;}
+#hat2{background-image:url(img/roles/ch3/hat2.png);}
+#drink3{background-image:url(img/roles/ch3/drink3.png);}
+#read4{background-image:url(img/roles/ch3/read4.png);}
+#lamp5 {background-image:url(img/roles/ch3/lamp5.png);}
+#math6{background-image:url(img/roles/ch3/math6.png);}
+
 </style>
 
 </head>
 
-<body style="height:10000px">
-<div class="container">
-<div style="position:absolute ; z-index:300 ; height:100px;">
-	<div style=" position:relative;">
-		test
-	</div>
-</div>
-<div style=" position:absolute; z-index:400;">
-  <div style="position:relative">
-  	<div style="position:absolute; width:200px;">
-    	this is absolute;
-    </div>
-  </div>
-</div>
-</div>
+<body >
+<div style="position:relative">
+      <div id="prince">fkjlsdjfkl</div>
+      <div id="kin1" class="layerInInner roles" style="width:20%; z-index:150; top:0">testsdfkhjklsdfklsdjfdsk</div>
+      <div id="hat2" class="layerInInner roles" style="width:20%; top:0; z-index:150"></div>
+      <div id="drink3" class="layerInInner roles" style="width:20%; z-index:150"></div>
+      <div id="read4" class="layerInInner roles" style="width:20%; z-index:150"></div>
+      <div id="lamp5" class="layerInInner roles" style="width:20%; z-index:150"></div>
+      <div id="math6" class="layerInInner roles" style="width:20%; z-index:150"></div>
+   </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
 <script src="js/jquery.superscrollorama.js"></script>
