--- a/Final/_blank_ch.html
+++ b/Final/_blank_ch.html
@@ -54,12 +54,12 @@
     </div>
   	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999;">
       <div>
-        <a id="toCh1" href="#" class="chBtn"><div><h3 class="aCenter" style="margin:5px 0 5px 0 ;">CH1</h3></div></a>
-        <a id="toCh2" href="#" class="chBtn"><div><h3 class="aCenter">CH2</h3></div></a>
-        <a id="toCh3" href="#" class="chBtn"><div><h3 class="aCenter">CH3</h3></div></a>
-        <a id="toCh4" href="#" class="chBtn"><div><h3 class="aCenter">CH4</h3></div></a>
-        <a id="toCh5" href="#" class="chBtn"><div><h3 class="aCenter">CH5</h3></div></a>
-        <a id="toTalk" href="#" class="chBtn"><div><h3 class="aCenter">CHx</h3></div></a>
+        <a id="toCh1" href="#" class="chBtn"></a>
+        <a id="toCh2" href="#" class="chBtn"></a>
+        <a id="toCh3" href="#" class="chBtn"></a>
+        <a id="toCh4" href="#" class="chBtn"></a>
+        <a id="toCh5" href="#" class="chBtn"></a>
+        <a id="toTalk" href="#" class="chBtn"></a>
        </div>
       <a id="hideNav" href="#" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
     </div>
@@ -73,6 +73,11 @@
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
 <script type="text/javascript" >
+onLoad ();
+function onLoad (){
+	$('#planet').width( $(window).width());
+	$('#planet').height($(window).width());
+}
 
 function setNavBtn (){
 $('#hideNav').on('click',function (e){
@@ -153,11 +158,7 @@ function setPara ()
   ctrl = $.superscrollorama ({
 		triggerAtCenter:false,
 	  playoutAnimations: false
-	});
-	
-	
-
-	
+	});	
 }
 
 </script>
