--- a/Final/ch1.html
+++ b/Final/ch1.html
@@ -3,130 +3,291 @@
 <head>
 <meta charset="utf-8">
 <title>Blank</title>
-<style>
-#container{ clear:both ; display:block ; height:9000px; }
-.row { position:static; height:auto; clear:both}
-
-
-section 
-{
-	position:relative;
-	clear:both;
-}
-section > .bg { z-index:1 ; position:absolute;}
-section > article { position:absolute; z-index:5;}
-section > .sprite { position:absolute; z-index: 3;}
-
-</style>
 
 <!--link href="css/bootstrap.min.css" rel="stylesheet"-->
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet"-->
 <link href="css/parallax.css" rel="stylesheet">
+<style>
+.atl1 { font-size:20px; line-height:150%; width:40%; padding:30px; color:white;  }
+
+
+
+.hideUp {display:none;}
+.noOpacity { opacity:0;}
+.p { left:4%; width:100%; }
+
+#earth { background:url(img/roles/ch1/1.png) no-repeat; width:400px top:200px; left:50% }
+#plane { background:url(img/roles/ch1/plane1.png) no-repeat;  -webkit-transform:rotateX(70deg); -webkit-transform:rotate(50deg);}
+#hat1 { background:url(img/roles/ch1/2-1.png) no-repeat; left:50%; top:100px; }
+#hat2 { background:url(img/roles/ch1/2-2.png) no-repeat; left:50%; top:100px;}
+</style>
+
 </head>
 
-<body>
-<div id="container">
+<body style="width:100%;">
+
+<div id="container" style="position:relative"  >
+
+<!-- 這裡是背景 -->
+
+	<div class="layer">
+
+  	<div id="ly1" class="layerInner" >
+  	  <img id="bg" class="layerInInner" src="img/bg/ch1/ch1_bg.png" width="100%" style="">
+      <div id="nullbg" class="layerInInner"></div>
+    </div>
+  </div>
+  
+  
+  
+<!-- 這裡是雲或星星 -->  
+  <div class="layer">
+  	<div id="ly2" class="layerInner">
+    </div>
+  </div>
+  
+  
+  
+<!-- 這裡是圖片 -->
+  <div class="layer" style="width:100%">
+  	<div id="ly3" class="layerInner" style="width:100%">
+
+      <div id="hat1"  class="layerInInner roles noOpacity" ></div>
+      <div id="hat2" class="layerInInner roles noOpacity" ></div>
+      			<div id="earth" class="layerInInner roles" ></div>
+    	<div id="plane" class="layerInInner roles"></div>
+      <div id="nullg" class="layerInInner roles"></div>
+      
+    </div>
+  </div>
+  
+<!-- 這裡是文字 -->
+  <div class="layer">
+  	<article id="ly4" class="layerInner atl1" style="width:100%">
+ 			<p id="a1p1" style="width:40%;" class=" p layerInInner noOpacity">Once when I was six years old I saw a magnificent picture in a book, called True Stories from Nature, about the primeval forest. It was a picture of a boa constrictor in the act of swallowing an animal. Here is a copy of the drawing.
+In the book it said: "Boa constrictors swallow their prey whole, without chewing it. After that they are not able to move, and they sleep through the six months that they need for digestion."</p>
 
 
-<section id="sec1" >
-	<img style="position:absolute;" id="bg1" src="img/bg/ch1-1.png" width="1366">
-</section>
+<p id="a1p2" style="width:40%;" class=" p layerInInner noOpacity" >I pondered deeply, then, over the adventures of the jungle. And after some work with a colored pencil I succeeded in making my first drawing. My Drawing Number One. It looked something like this:
+蛇吞象圖
+I showed my masterpiece to the grown-ups, and asked them whether the drawing frightened them. But they answered: "Frighten? Why should any one be frightened by a hat?"
+My drawing was not a picture of a hat. It was a picture of a boa constrictor digesting an elephant. But since the grown-ups were not able to understand it, I made another drawing: I drew the inside of a boa constrictor, so that the grown-ups could see it clearly. They always need to have things explained. My Drawing Number Two looked like this:大象圖
+</p>
 
-<section id="sec2" >
-	<img id="bg2" style="position:absolute" src="img/bg/ch1-2.png" width="1366">
-</section>
 
-<section id="sec3">
-	<img id="bg3" style="position:absolute"  src="img/bg/ch1-3.png" width="1366">
-</section>
+<p id="a1p3" style="width:40%;" class=" p layerInInner noOpacity">The grown-ups' response, this time, was to advise me to lay aside my drawings of boa constrictors, whether from the inside or the outside, and devote myself instead to geography, history, arithmetic, and grammar. That is why, at the age of six, I gave up what might have been a magnificent career as a painter. I had been disheartened by the failure of my Drawing Number One and my Drawing Number Two. Grown-ups never understand anything by themselves, and it is tiresome for children to be always and forever explaining things to them.
+So then I chose another profession, and learned to pilot airplanes. I have flown a little over all parts of the world; and it is true that geography has been very useful to me. At a glance I can distinguish China from Arizona. If one gets lost in the night, such knowledge is valuable.
+In the course of this life I have had a great many encounters with a great many people who have been concerned with matters of consequence. I have lived a great deal among grown-ups. I have seen them intimately, close at hand. And that hasn't much improved my opinion of them.
+Whenever I met one of them who seemed to me at all clear-sighted, I tried the experiment of showing him my Drawing Number One, which I have always kept. I would try to find out, so, if this was a person of true understanding. But, whoever it was, he, or she, would always say:
+"That is a hat."
+Then I would never talk to that person about boa constrictors, or primeval forests, or stars. I would bring myself down to his level. I would talk to him about bridge, and golf, and politics, and neckties. And the grown-up would be greatly pleased to have met such a sensible man.
+</p>
 
-<section id="sec4">
-	<img id="bg4" style="position:absolute" src="img/bg/ch1-4.png" width="1366">
-</section>
-<section id="sec5">
-	<img id="bg5" style="position:absolute ; left:100% ;top:-200px; " src="img/bg/ch1-4c.png" width="1366">
-</section>
+
+<p id="a1p4" style="width:40%;" class=" p layerInInner noOpacity">So I lived my life alone, without anyone that I could really talk to, until I had an accident with my plane in the Desert of Sahara, six years ago. Something was broken in my engine. And as I had with me neither a mechanic nor any passengers, I set myself to attempt the difficult repairs all alone. It was a question of life or death for me: I had scarcely enough drinking water to last a week.
+
+The first night, then, I went to sleep on the sand, a thousand miles from any human habitation. I was more isolated than a shipwrecked sailor on a raft in the middle of the ocean. Thus you can imagine my amazement, at sunrise, when I was awakened by an odd little voice. It said:
+"If you please — draw me a sheep!"
+</p>
+
+<p id="a1p5" style="width:40%;" class="layerInInner noOpacity p ">"What!"
+"Draw me a sheep!"
+I jumped to my feet, completely thunderstruck. I blinked my eyes hard. I looked carefully all around me. And I saw a most extraordinary small person, who stood there examining me with great seriousness. Here you may see the best portrait that, later, I was able to make of him. But my drawing is certainly very much less charming than its model.
+
+That, however, is not my fault. The grown-ups discouraged me in my painter's career when I was six years old, and I never learned to draw anything, except boas from the outside and boas from the inside.
+
+Now I stared at this sudden apparition with my eyes fairly starting out of my head in astonishment. Remember, I had crashed in the desert a thousand miles from any inhabited region. And yet my little man seemed neither to be straying uncertainly among the sands, nor to be fainting from fatigue or hunger or thirst or fear. Nothing about him gave any suggestion of a child lost in the middle of the desert, a thousand miles from any human habitation. When at last I was able to speak, I said to him:
+"But — what are you doing here?"
+And in answer he repeated, very slowly, as if he were speaking of a matter of great consequence:
+"If you please — draw me a sheep..."
+
+When a mystery is too overpowering, one dare not disobey. Absurd as it might seem to me, a thousand miles from any human habitation and in danger of death, I took out of my pocket a sheet of paper and my fountain-pen. But then I remembered how my studies had been concentrated on geography, history, arithmetic and grammar, and I told the little chap (a little crossly, too) that I did not know how to draw.
+</p>
+
+<p id="nullp" class="layerInInner"></p>
+    </article>
+  </div><!-- /.layer -->
+  
+    
+
+  
+<!-- 這裡是NAVIGATION -->  
+	<div style="width:100%; position:fixed ; background:#111111 ; border-bottom:solid medium #222222; height:37px; z-index:9999;">
+    <div class="layerInner" style="width:100%">
+     	<a id="index" href="#" style="float:left" ><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px;"> The Little Prince</h2></a>
+      <a id="preNav" href="#" onClick="return false" style="float:right; display:block; margin-right:15px;"><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px; "> Chapters</h2></a>
+
+    </div>
+  	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999; ">
+      <div>
+        <a id="toHome" href="index.html" class="chBtn"></a>
+        <a id="toCh1" href="ch1.html" class="chBtn"></a>
+        <a id="toCh2" href="#" class="chBtn"></a>
+        <a id="toCh3" href="ch3.html" class="chBtn"></a>
+        <a id="toCh4" href="#" class="chBtn"></a>
+        <a id="toCh5" href="#" class="chBtn"></a>
+        <a id="toTalk" href="#" class="chBtn"></a>
+       </div>
+      <a id="hideNav" href="#" onClick="return false" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
+    </div>
+  </div>
+  
 
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
 <script src="js/jquery.superscrollorama.js"></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
 <script type="text/javascript" >
-	var dur = 1000 ;  
-	var ctrl;
+function onLoad (){
+	$('#bg').width($(window).width());
+	
+}
+onLoad();
+
+
+//$( "#navInner").hide();
+$('#hideNav').on('click',function (e){
+	$("#nav").hide( 'blind', null, 1000, null );	
+});
+$('#preNav').on('click',function (e){
+	$("#nav").show( 'blind', null, 2000, null );
+});
+
+
+$(window).resize(function(e) {
+	resiz ();
+	var  a = confirm ("Please don't resize the window when reading the pages! This Page will now refresh ");
+	if  (a){ location.reload()} else { }
+
+	
+});
+
+function resiz ()
+{
+	if ($(window).width() >= 960)
+	{
+		$('#ly1').css('width',$(window).width());
+		$('#bg').attr('width',$(window).width());
+	}else{
+		$('#bg').width($(window).width());
+		$('#ly1').css('width',$(window).width());
+	}
+}
+
+
+
+
+var ctrl ;
+var bgDy = 0;
+var docDur = 0; 
+function init()
+{
+	bgDy = $('#bg').height() - $(window).height();
+	docDur = $('#bg').height()*2  ; 	
+	$('body').height(docDur);
+	//alert($('body').height());
+	//$('body').height($('#bg').height());
+	//alert($(document).height()); 
+	$.each($('.layer'),function (e){ $(this).height($(window).height()) ;});
+	//	$('#container').height($(body).height());
+	$("#ly1").height($(window).height());	
+	$("#ly4").height($(window).height());
+}
+
+	
 $(document).ready(function(e) {
-	rH ();
+	init();
+	resiz ();
+	//rH ();
+	$(document).scrollTop(3);
   ctrl = $.superscrollorama ({
 		triggerAtCenter:false,
 	  playoutAnimations: false
 	});
 	
+
+
+
+var n =
+{
+	 'turnEarth':-1436,
+	 'turnSky':	 -2557,
+	 'closeFloor': -4238,
+	 'planeShow': -2666
+}
+<!-- 以下是Parallax -->
+	ctrl.pin ($('#ly1'),docDur,{
+//		onPin:function (){alert ('test');},
+		anim:(new TimelineLite())
+			.append(TweenMax.fromTo($('#bg'),40,{css:{top:0} },{css:{top:-1436},ease:Linear.easeNone}))
+			.append(TweenMax.fromTo($('#bg'),10,{css:{top:-1436},immediateRender:false },{css:{top:-2557},ease:Linear.easeNone}))	
+			.append(TweenMax.fromTo($('#bg'),20,{css:{top:-2557},immediateRender:false },{css:{top:-4238},ease:Linear.easeNone}))
+			.append(TweenMax.fromTo($('#bg'),40,{css:{top:-4238},immediateRender:false },{css:{top:-bgDy + 200},ease:Linear.easeNone}))
+			.append(TweenMax.fromTo($('#nullbg'),10,{css:{top:0},immediateRender:false },{css:{top:100},ease:Linear.easeNone}))
+//			.append(TweenMax.fromTo($('#bg'),5,{css:{top:0},immediateRender:false },{css:{top:-bgDy},ease:Linear.easeNone}))
+	//	.append(TweenMax.fromTo($('#nullbg'),5,{css:{opacity:0},immediateRender:false },{css:{opacity:1},ease:Linear.easeNone}))
+		,onUnpin : function (){alert ('unpinBG');}
+		
+	});	
 	
+	ctrl.pin ($('#ly4'),docDur,{
+		anim:(new TimelineLite())
+//			.append (TweenMax.fromTo($('#a1p1'),.5,{css:{top:300 , opacity:0},immediateRender:false , ease:Linear.easeNone},{css:{top:250,opacity:1},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p1'),5,{css:{ opacity:1,top:250},immediateRender:true , ease:Linear.easeNone},{css:{top:50},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p1'),.5,{css:{top:50 , opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{top:-100,opacity:0},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p2'),.5,{css:{top:300 , opacity:0},immediateRender:false , ease:Linear.easeNone},{css:{top:250,opacity:1},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p2'),5,{css:{top:250},immediateRender:false , ease:Linear.easeNone},{css:{top:50},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p2'),.5,{css:{top:50 , opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{top:-100,opacity:0},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p3'),.5,{css:{top:300 , opacity:0},immediateRender:false , ease:Linear.easeNone},{css:{top:250,opacity:1},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p3'),5,{css:{top:250},immediateRender:false , ease:Linear.easeNone},{css:{top:50},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p3'),.5,{css:{top:50 , opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{top:-100,opacity:0},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p4'),.5,{css:{top:300 , opacity:0},immediateRender:false , ease:Linear.easeNone},{css:{top:250,opacity:1},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p4'),5,{css:{top:250},immediateRender:false , ease:Linear.easeNone},{css:{top:50},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p4'),.5,{css:{top:50 , opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{top:-100,opacity:0},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p5'),.5,{css:{top:300 , opacity:0},immediateRender:false , ease:Linear.easeNone},{css:{top:250,opacity:1},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#a1p5'),5,{css:{top:250},immediateRender:false , ease:Linear.easeNone},{css:{top:50},ease:Linear.easeNone}))
+//			.append (TweenMax.fromTo($('#a1p5'),.5,{css:{top:50 , opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{top:-100,opacity:0},ease:Linear.easeNone}))
+
+		,onUnpin : function (){ alert ("unpinText");}
+	
+	});
+	
+	ctrl.pin ($('#ly3'),docDur,{
+		anim:(new TimelineLite())
+//			.append (TweenMax.fromTo($('#nullg'),20,{css:{opacity:1},immediateRender:true , ease:Linear.easeNone},{css:{opacity:0 },ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#earth'),2,{css:{top:200 ,scale:1},immediateRender:true , ease:Linear.easeNone},{css:{ top:300,scale:1.5 },ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#earth'),2,{css:{scale:1.5,top:300, opacity:1},immediateRender:true , ease:Linear.easeNone},{css:{scale:2, opacity:0,top:$(window).height() },ease:Linear.easeNone}))			
+
+			.append (TweenMax.fromTo($('#hat1'),.5,{css:{opacity:0,top:300},immediateRender:false  , ease:Linear.easeNone},{css:{opacity:1,top:200},ease:Linear.easeNone}))			
+			.append (TweenMax.fromTo($('#hat1'),2,{css:{opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{opacity:0},ease:Linear.easeNone}))			
+			.append (TweenMax.fromTo($('#hat2'),.5,{css:{opacity:0},immediateRender:false, ease:Linear.easeNone},{css:{opacity:1},ease:Linear.easeNone}))
+			.append (TweenMax.fromTo($('#hat2'),2,{css:{opacity:1},immediateRender:false , ease:Linear.easeNone},{css:{opacity:0},ease:Linear.easeNone}))
+			
+			.append (TweenMax.fromTo($('#plane'),20,{css:{left:'100%', top:200},immediateRender:true , ease:Linear.easeNone},{css:{left:'50%',top:250 },ease:Linear.easeNone}))
+			
+		
+		
+	})
+
+});
+
+$(window).scroll(function(e) {
+  console.log($(document).scrollTop());
+	console.log('bgTop',$('#bg').css('top'));
+	
+
+});
+
+
+
 /*
-ctrl.pin ($('#sec1'),dur,
-{anim:(new TimelineLite ())
-	.append([
-		TweenMax.fromTo($('#bg1'),5,{css:{top:0},immediateRender:true},{css:{top:-100}})
-	]),
-	onUnpin:function (){$('#bg1').css('position','fixed').css('top',-100)}
-});
-
-ctrl.pin ($('#sec2'),dur,
-{anim:(new TimelineLite ())
-	.append([
-		TweenMax.fromTo($('#bg2'),2,{css:{opacity:0},immediateRender:true},{css:{opacity:1}}),
-		TweenMax.fromTo($('#bg2'),5,{css:{top:0},immediateRender:true},{css:{top:-100}})
-	]),
-	onUnpin:function (){
-		$('#bg2').css('position','fixed').css('top',-100)
-	}
-});
-
-ctrl.pin ($('#sec3'),dur,
-{anim:(new TimelineLite ())
-	.append([
-		TweenMax.fromTo($('#bg3'),2,{css:{opacity:0},immediateRender:true},{css:{opacity:1}}),
-		TweenMax.fromTo($('#bg3'),5,{css:{top:0},immediateRender:true},{css:{top:-200}})
-	]),
-	onUnpin:function (){
-		$('#bg3').css('position','fixed').css('top',-200)
-	}
-});
-
-ctrl.pin ($('#sec4'),dur,
-{anim:(new TimelineLite ())
-	.append([
-		TweenMax.fromTo($('#bg4'),2,{css:{opacity:0},immediateRender:true},{css:{opacity:1}}),
-		TweenMax.fromTo($('#bg4'),5,{css:{top:0},immediateRender:true},{css:{top:-200}})
-	]),
-	onUnpin:function (){
-		$('#bg4').css('position','fixed').css('top',-200);
-	}
-});
-
-ctrl.pin ($('#sec5'),dur,
-{anim:(new TimelineLite ())
-	.append([
-		TweenMax.fromTo($('#bg5'),5,{css:{left:'100%'},immediateRender:true},{css:{left:0}}),
-		TweenMax.fromTo($('#bg4'),5,{css:{left:0},immediateRender:true},{css:{left:'-100%'}})
-	]),
-	onUnpin:function (){
-//		$('#bg4').css('position','fixed').css('top',-200)
-	}
-});
-*/
-
-
-
-
-
-});
-
-
 function rH ()
 {
-	$.each($('#container').children(),function (){ adjH($(this))});
+//	adjH($('#ly1'));
+//	adjH($('#ly4'));
+	
 }
 
 function adjH ($sec)
@@ -134,7 +295,8 @@ function adjH ($sec)
 	
 	var h = 0 ;
 	var w = 0 ;
-	$.each($sec.children(),function (){ 
+	$.each($sec.children().children().first(),function (){ 
+		//alert($sec.children().children().first().attr('id'));
 		h = h +  $(this).height(); 
 		//alert($(this).height())
 		if (w < $(this).width() )
@@ -146,8 +308,10 @@ function adjH ($sec)
 	$sec.height(h);
 	$sec.width(w);
 }
+*/
+</script>
 
-
+<script>
 </script>
 </body>
 </html>
