--- a/Final/index.html
+++ b/Final/index.html
@@ -8,8 +8,8 @@
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet"-->
 <link href="css/parallax.css" rel="stylesheet">
 <style>
-
-#bg{ background-image: url(img/bg/home/firstpage.png); background-repeat:repeat-y;}
+body { overflow: hihidden;}
+#bg{ background-image: url(img/bg/home/firstpage.png); background-repeat:repeat-y; background-size:cover;}
 </style>
 
 </head>
@@ -19,7 +19,7 @@
 <!-- 這裡是背景 -->
 	<div class="layer">
   	<div id="ly1" class="layerInner" >
-			<div id="bg" ></div>
+			<div id="bg" class="layerInInner" style="width:100%; height:1080px"></div>
       <div id="nullbg" class="layerInInner"></div>
     </div>
   </div>
@@ -52,16 +52,16 @@
     <div class="layerInner" style="width:100%">
      	<a id="index" href="#" style="float:left" ><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px;"> The Little Prince</h2></a>
       <a id="preNav" href="#" style="float:right; display:block; margin-right:15px;"><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px; "> Chapters</h2></a>
-
     </div>
   	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999;">
       <div>
-        <a id="toCh1" href="#" class="chBtn"></a>
-        <a id="toCh2" href="#" class="chBtn"></a>
-        <a id="toCh3" href="#" class="chBtn"></a>
-        <a id="toCh4" href="#" class="chBtn"></a>
-        <a id="toCh5" href="#" class="chBtn"></a>
-        <a id="toTalk" href="#" class="chBtn"></a>
+        <a id="toHome" href="index.html" class="chBtn"></a>
+        <a id="toCh1" href="ch1.html" class="chBtn"></a>
+        <a id="toCh2" href="ch2.html" class="chBtn"></a>
+        <a id="toCh3" href="ch3.html" class="chBtn"></a>
+        <a id="toCh4" href="ch4.html" class="chBtn"></a>
+        <a id="toCh5" href="ch5.html" class="chBtn"></a>
+        <a id="toTalk" href="msg.html" class="chBtn"></a>
        </div>
       <a id="hideNav" href="#" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
     </div>
@@ -77,8 +77,9 @@
 <script type="text/javascript" >
 onLoad ();
 function onLoad (){
-	$('#planet').width( $(window).width());
-	$('#planet').height($(window).width());
+	$(document).height( $(window).height());
+	$('body').width( $(window).width());
+	
 }
 
 function setNavBtn (){
@@ -98,70 +99,7 @@ $(window).resize(function(e) {
 	
 });
 
-function resiz ()
-{
-	if ($(window).width() >= 960)
-	{
-		$('#bg').attr('width',$(window).width());
-	}else{
-		$('#bg').attr('width',960);
-	}
-}
 
-
-
-$(window).resize(function(e) {
-	resiz ();
-	var  a = confirm ("Please don't resize the window when reading the pages! This Page will now refresh ");
-	if  (a){ location.reload()} else { location.reload();}
-
-	
-});
-
-function resiz ()
-{
-	if ($(window).width() >= 960)
-	{
-		$('#bg').attr('width',$(window).width());
-	}else{
-		$('#bg').attr('width',960);
-	}
-}
-
-
-
-
-var ctrl ;
-var bgDy = 0;
-var docDur = 0; 
-function init()
-{
-	bgDy = $('#bg').height() - $(window).height();
-	docDur = $('#bg').height()*2; 	
-	$('body').height($('#bg').height()*2 + $(window).height());
-			//alert($('body').height());
-			//$('body').height($('#bg').height());
-			//alert($(document).height()); 
-	//$.each($('.layer'),function (e){ $(this).height($(window).height()) ;});
-			//	$('#container').height($(body).height());
-//	$("#ly4").height($(window).height());
-}
-
-
-$(document).ready(function(e) {
-	init();
-	resiz ();
-	setNavBtn ();
-	setPara ();
-});
-
-function setPara ()
-{		
-  ctrl = $.superscrollorama ({
-		triggerAtCenter:false,
-	  playoutAnimations: false
-	});	
-}
 
 </script>
 </body>
