--- a/Final/Little Prince chapter2.htm
+++ b/Final/Little Prince chapter2.htm
@@ -1,9 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0055)http://yumelissa.github.io/wp_2013/demo/chapter2-2.html -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=Big5">
-<link href="css/parallax.css" rel="stylesheet" type="text/css" />
 
-<title>Chapter2</title>
+<title>Little Prince chapter2</title>
 </head>
 
 <body class="color_change" style="overflow-x:hidden; background-image:url(pic/ch2back.png); ">
@@ -66,28 +65,6 @@ For she did not want him to see her crying. She was such a proud flower.<br>
 <img src="./Little Prince chapter2_files/earth.png" style="width: 400px; height: 400px; top: 50px; position: absolute; z-index: -1; margin: 150px; -webkit-transform: matrix(1, 0, 0, 1, 0, 0);" id="earth">
 </div>
 </div>
-
-<!-- 這裡是NAVIGATION -->  
-	<div style="width:100%; position:fixed ; background:#111111 ;top:0; border-bottom:solid medium #222222; height:37px; z-index:9999;">
-    <div class="layerInner" style="width:100%">
-     	<a id="index" href="#" style="float:left" ><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px;"> The Little Prince</h2></a>
-      <a id="preNav" href="#" style="float:right; display:block; margin-right:15px;"><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px; "> Chapters</h2></a>
-    </div>
-  	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999;">
-      <div>
-        <a id="toHome" href="index.html" class="chBtn"></a>
-        <a id="toCh1" href="ch1.html" class="chBtn"></a>
-        <a id="toCh2" href="ch2.html" class="chBtn"></a>
-        <a id="toCh3" href="ch3.html" class="chBtn"></a>
-        <a id="toCh4" href="ch4.html" class="chBtn"></a>
-        <a id="toCh5" href="ch5.html" class="chBtn"></a>
-        <a id="toTalk" href="msg.html" class="chBtn"></a>
-       </div>
-      <a id="hideNav" href="#" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
-    </div>
-  </div>
-
-
 
 <div style="height:1000px">
 <!--<img src="file:///C|/Users/asus/Documents/Web程式設計/pic/rose.jpg" id="rose-2" style=" z-index:1; width:300px; height:300px; position:absolute;">
@@ -444,13 +421,6 @@ For she did not want him to see her crying. She was such a proud flower.<br>
 			}
 //			
 	});
-	
-$('#hideNav').on('click',function (e){
-	$("#nav").hide( 'blind', null, 1000, null );	
-});
-$('#preNav').on('click',function (e){
-	$("#nav").show( 'blind', null, 2000, null );
-});
 
 						
 </script>
