--- a/Final/ch1.html
+++ b/Final/ch1.html
@@ -111,27 +111,26 @@ When a mystery is too overpowering, one dare not disobey. Absurd as it might see
     
 
   
+
 <!-- 這裡是NAVIGATION -->  
 	<div style="width:100%; position:fixed ; background:#111111 ; border-bottom:solid medium #222222; height:37px; z-index:9999;">
     <div class="layerInner" style="width:100%">
      	<a id="index" href="#" style="float:left" ><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px;"> The Little Prince</h2></a>
-      <a id="preNav" href="#" onClick="return false" style="float:right; display:block; margin-right:15px;"><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px; "> Chapters</h2></a>
-
+      <a id="preNav" href="#" style="float:right; display:block; margin-right:15px;"><h2 style="margin:0px; padding:0px; color:#FFFFFF; opacity:.6;padding:5px 0px 5px 10px; "> Chapters</h2></a>
     </div>
-  	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999; ">
+  	<div id="nav" class="layerInner" style="height:220px; clear:both; z-index:9999;">
       <div>
         <a id="toHome" href="index.html" class="chBtn"></a>
         <a id="toCh1" href="ch1.html" class="chBtn"></a>
-        <a id="toCh2" href="#" class="chBtn"></a>
+        <a id="toCh2" href="ch2.html" class="chBtn"></a>
         <a id="toCh3" href="ch3.html" class="chBtn"></a>
-        <a id="toCh4" href="#" class="chBtn"></a>
-        <a id="toCh5" href="#" class="chBtn"></a>
-        <a id="toTalk" href="#" class="chBtn"></a>
+        <a id="toCh4" href="ch4.html" class="chBtn"></a>
+        <a id="toCh5" href="ch5.html" class="chBtn"></a>
+        <a id="toTalk" href="msg.html" class="chBtn"></a>
        </div>
-      <a id="hideNav" href="#" onClick="return false" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
+      <a id="hideNav" href="#" style="width:100%; float:left; display:block; color:white; " ><div><h3 class="aCenter">hide</h3></div></a>
     </div>
   </div>
-  
 
 </div>
 <script src="js/jquery.min.js"></script>
