--- a/Final/ch1.html
+++ b/Final/ch1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Blank</title>
+<title>Chapter 1</title>
 
 <!--link href="css/bootstrap.min.css" rel="stylesheet"-->
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet"-->
